# smartgpt_langchain

./: .gitignore  pyproject.toml  readme.md  run.py
app/api/: main.py
app/frontend/: chat.js  index.html  styles.css
app/scripts/: __init__.py  create_chains.py  handle_chain.py
