[tool.poetry]
name = "smartgpt-langchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "smartgpt_langchain"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.173"
fastapi = "^0.95.2"
daphne = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
openai = "^0.27.6"

[tool.black]
line-length = 79
target-version = ['py36']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
